Add main page tests for left menu and changing theme

--- a/tests/snapshots/specs/unauthorized/mainPage.spec.ts/headerAriaSnapshot.yml
+++ b/tests/snapshots/specs/unauthorized/mainPage.spec.ts/headerAriaSnapshot.yml
@@ -1,5 +1,5 @@
 - banner:
-  - button "Закрыть меню навигации":
+  - button "Открыть меню навигации":
     - img
   - button "RUTUBE":
     - img "RUTUBE"
