Add main page tests for left menu and changing theme

--- a/tests/snapshots/specs/unauthorized/mainPage.spec.ts/addButtonListPopup.yml
+++ b/tests/snapshots/specs/unauthorized/mainPage.spec.ts/addButtonListPopup.yml
@@ -1,7 +1,6 @@
 - list:
   - listitem:
-    - link "Загрузить видео":
-      - /url: https://studio.rutube.ru/uploader/
+    - link:
       - img
   - listitem:
     - link "Загрузить Shorts":
