--- a/tests/snapshots/authorized/mainPage.spec.ts/headerAriaSnapshot.yml
+++ b/tests/snapshots/authorized/mainPage.spec.ts/headerAriaSnapshot.yml
@@ -16,4 +16,4 @@
     - paragraph:
       - img
       - text: Безопасный режим
-  - img "Иконка канала Kirillz"
+  - img "Иконка канала channel71556493"
