--- a/tests/snapshots/authorized/mainPage.spec.ts/notificationsPopup.yml
+++ b/tests/snapshots/authorized/mainPage.spec.ts/notificationsPopup.yml
@@ -1,8 +1,5 @@
 - text: Уведомления
 - button:
   - img
-- list:
-  - listitem:
-    - link
-  - listitem:
-    - link
+- img "bird_like.svg"
+- text: Уведомлений пока нет Здесь будут уведомления о новых видео, комментариях, действиях на канале и новостях, на которые вы подписаны
